# knixl

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE-MIT  NEXT-STEPS.md  README.md  RELEASING.md  SECURITY.md  flake.nix  mise.toml
.github/workflows/: ci.yml  publish-crates.yml
crates/knixl/: Cargo.toml
crates/knixl-cli/: Cargo.toml
crates/knixl-cli/src/: main.rs  tui.rs
crates/knixl-cli/src/hub/: author.rs  home.rs  install.rs  mod.rs  theme.rs
crates/knixl-cli/src/tui/: author.rs  browse.rs  home.rs  install.rs  mod.rs  theme.rs  widgets.rs
crates/knixl-cli/tests/: cli.rs
crates/knixl-ir/: Cargo.toml
crates/knixl-ir/src/: emit.rs  expr.rs  hoist.rs  lib.rs  module.rs
crates/knixl-kdl/: Cargo.toml
crates/knixl-kdl/src/: lib.rs
crates/knixl-lock/: Cargo.toml
crates/knixl-lock/src/: lib.rs  model.rs  reconcile.rs
crates/knixl-modules/: Cargo.toml
crates/knixl-modules/src/: lib.rs  registry.rs  stdlib.rs  template.rs
crates/knixl-modules/src/builtin/: backups.rs  disko.rs  host.rs  mod.rs  package.rs  postgres.rs  raw_nix.rs
crates/knixl-modules/stdlib/home-manager/: knixl-module.kdl
crates/knixl-modules/stdlib/incus/: knixl-module.kdl
crates/knixl-modules/stdlib/openssh/: knixl-module.kdl
crates/knixl-modules/stdlib/security-headers/: knixl-module.kdl
crates/knixl-modules/stdlib/user/: knixl-module.kdl
crates/knixl-modules/stdlib/zfs/: knixl-module.kdl
crates/knixl-nix/: Cargo.toml
crates/knixl-nix/src/: baseline.rs  lib.rs  module.rs  module_fetch.rs  nixeval.rs  optionsdoc.rs  pin.rs
crates/knixl-oracle/: Cargo.toml
crates/knixl-oracle/src/: lib.rs  nixtype.rs
crates/knixl-oracle/tests/: check.rs
crates/knixl-oracle/tests/fixtures/: options.json
crates/knixl-pipeline/: Cargo.toml
crates/knixl-pipeline/src/: flake.rs  gather.rs  install.rs  lib.rs  project.rs  strategy.rs
crates/knixl-pipeline/tests/: baseline_validation.rs  fetched_modules.rs  golden.rs  oracle_module_effective_set.rs  oracle_per_host.rs  system_flake.rs
crates/knixl/src/: main.rs
crates/knixl/src/tui/: author.rs  browse.rs  home.rs  mod.rs  widgets.rs
crates/knixl/tests/: cli.rs
docs/: 00-overview.md  01-architecture.md  02-reproducibility-and-taint.md  03-module-system.md  04-template-grammar.md  05-cli.md  06-oracle.md
docs/adr/: 0001-kdl-is-authoritative.md  0002-emit-source-not-values.md  0003-validate-against-real-nixos-options.md  0004-whole-file-taint.md  0005-package-version-pinning.md  0006-automatic-pin-strategy-selection.md  0007-per-host-baseline-nixpkgs-rev.md  0008-out-of-tree-oracle-modules.md  0009-system-assembly-flake.md  0010-module-distribution.md
docs/superpowers/plans/: 2026-07-16-default-pin-resolver.md  2026-07-16-install-build-slice-b.md  2026-07-16-install-version-pinning.md  2026-07-17-per-host-baseline.md  2026-07-17-pin-strategy-selection.md  2026-07-17-pinning-followups.md  2026-07-17-tui-strategy-build.md  2026-07-20-declarative-runtime-condition.md  2026-07-20-emit-list-of-attrset.md  2026-07-20-open-source-prep.md  2026-07-20-tui-module-editor-slice2.md  2026-07-20-tui-module-editor.md  2026-07-21-oracle-out-of-tree-modules.md  2026-07-22-host-primitive-modules.md  2026-07-22-system-flake-emission.md  2026-07-23-disko-module.md  2026-07-23-incus-host-module.md  2026-07-23-module-distribution.md  2026-07-23-secrets-tailscale.md  2026-07-24-home-manager-module.md
docs/superpowers/reviews/: 2026-07-20-documentation-review.md
docs/superpowers/specs/: 2026-07-14-install-cli-slice-a-design.md  2026-07-14-install-tui-slice-c-design.md  2026-07-14-let-hoisting-design.md  2026-07-15-tui-v2-design.md  2026-07-16-default-pin-resolver-design.md  2026-07-16-install-build-slice-b-design.md  2026-07-16-install-version-pinning-design.md  2026-07-17-cross-rev-resolution-spike.md  2026-07-17-per-host-baseline-design.md  2026-07-17-pin-strategy-selection-design.md  2026-07-17-pinning-followups-design.md  2026-07-17-tui-strategy-build-design.md  2026-07-19-declarative-runtime-condition-design.md  2026-07-20-emit-list-of-attrset-design.md  2026-07-20-open-source-prep-design.md  2026-07-20-tui-module-editor-design.md  2026-07-20-tui-module-editor-slice2-design.md  2026-07-21-host-primitive-modules-design.md  2026-07-21-oracle-out-of-tree-modules-design.md  2026-07-22-disko-module-design.md  2026-07-22-system-flake-emission-design.md  2026-07-23-incus-host-module-design.md  2026-07-23-module-distribution-design.md  2026-07-23-secrets-tailscale-design.md  2026-07-24-home-manager-module-design.md
examples/: README.md  knixl.lock.kdl
examples/expected/: db-backup.nix  db.nix  gateway.nix  nas.nix  pinned-override.nix  pinned.nix  shared.nix  vault.nix  vmhost.nix  web.nix  workstation.nix
examples/hosts/: db.kdl  gateway.kdl  nas.kdl  pinned-override.kdl  pinned.kdl  shared.kdl  vault.kdl  vmhost.kdl  web.kdl  workstation.kdl
modules/home-manager/: knixl-module.kdl
modules/tailscale/: knixl-module.kdl
modules/web-service/: knixl-module.kdl
