[package]
name = "knixl-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "knixl"
path = "src/main.rs"

[dependencies]
knixl-ir = { path = "../knixl-ir" }
knixl-kdl = { path = "../knixl-kdl" }
knixl-oracle = { path = "../knixl-oracle" }
knixl-modules = { path = "../knixl-modules" }
knixl-lock = { path = "../knixl-lock" }
knixl-nix = { path = "../knixl-nix" }
knixl-pipeline = { path = "../knixl-pipeline" }
clap.workspace = true
miette.workspace = true
semver.workspace = true
# TUI for `install` (knixl-cli only; the libraries stay TUI-free). lipgloss renders the
# styled panel; crossterm drives raw-mode input.
lipgloss = "0.1.1"
crossterm = "0.28"
