[package]
name = "knixl-kdl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
description = "KDL input-parsing helpers for knixl, over the kdl crate."
keywords = ["kdl", "nix", "parsing"]
categories = ["development-tools", "parsing"]

[dependencies]
kdl.workspace = true
miette.workspace = true
thiserror.workspace = true
