[package]
name = "knixl-nix"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
description = "nixfmt invocation and content hashing for knixl."
keywords = ["nix", "nixfmt", "hashing"]
categories = ["development-tools"]

[dependencies]
blake3.workspace = true
thiserror.workspace = true
ureq = "3"
serde_json.workspace = true
