[package]
name = "knixl-oracle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
description = "Validate emitted NixOS option paths against the real option set."
keywords = ["nix", "nixos", "validation"]
categories = ["development-tools"]

[dependencies]
knixl-ir = { path = "../knixl-ir", version = "0.3.1" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
