[package]
name = "knixl-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
description = "knixl's generation pipeline: KDL in, formatted Nix files out."
keywords = ["nix", "kdl", "codegen"]
categories = ["development-tools"]

[dependencies]
knixl-ir = { path = "../knixl-ir", version = "1.0.0" }
knixl-kdl = { path = "../knixl-kdl", version = "1.0.0" }
knixl-modules = { path = "../knixl-modules", version = "1.0.0" }
knixl-nix = { path = "../knixl-nix", version = "1.0.0" }
knixl-lock = { path = "../knixl-lock", version = "1.0.0" }
knixl-oracle = { path = "../knixl-oracle", version = "1.0.0" }
kdl.workspace = true
semver.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
