[package]
name = "knixl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
authors.workspace = true
repository.workspace = true
description = "Compile opinionated KDL into maintainable, committed NixOS module source."
keywords = ["nix", "nixos", "kdl", "configuration"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[dependencies]
knixl-ir = { path = "../knixl-ir", version = "1.0.0" }
knixl-kdl = { path = "../knixl-kdl", version = "1.0.0" }
knixl-oracle = { path = "../knixl-oracle", version = "1.0.0" }
knixl-modules = { path = "../knixl-modules", version = "1.0.0" }
knixl-lock = { path = "../knixl-lock", version = "1.0.0" }
knixl-nix = { path = "../knixl-nix", version = "1.0.0" }
knixl-pipeline = { path = "../knixl-pipeline", version = "1.0.0" }
clap.workspace = true
kdl.workspace = true
miette.workspace = true
semver.workspace = true
# TUI for `install` (knixl only; the libraries stay TUI-free). lipgloss renders the
# styled panel; crossterm drives raw-mode input.
lipgloss = "0.1.1"
crossterm = "0.29"
bubbletea-rs = "0.0.9"
bubbletea-widgets = { version = "0.1.12", default-features = false }
tokio = { version = "1.52.3", default-features = false, features = ["rt", "macros"] }
